@@ -16,6 +16,9 @@ changes in sbcl-1.0.10 relative to sbcl-1.0.9:
   * enhancement: DEFINE-MODIFY-MACRO lambda-list information is
     now more readable in environments like Slime which display it.
     (thanks to Tobias C. Rittweiler)
+  * bug fix: SB-EXT:COMPARE-AND-SWAP was non-atomic unless the compiler
+    was able to infer the correct argument type for the object on which
+    the CAS operation was being performed.
 
 changes in sbcl-1.0.9 relative to sbcl-1.0.8:
   * minor incompatible change: SB-SYS:OUTPUT-RAW-BYTES is deprecated.
